--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-tooltip": "^4.2.21"
   }
 }
