--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "components": "^0.1.0",
+    "leaflet": "^1.8.0",
     "react": "^18.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
+    "react-leaflet": "^4.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
