--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.9",
+    "bootstrap": "^5.2.0-beta1",
     "components": "^0.1.0",
     "leaflet": "^1.8.0",
     "react": "^18.0.0",
