--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/danbeiers/flightpub#readme",
   "dependencies": {
-    "concurrently": "^7.3.0"
+    "concurrently": "^7.3.0",
+    "react-scripts": "^5.0.1",
+    "svgo": "^2.8.0"
   }
 }
