--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.8.0",
-    "mongoose": "^6.4.7",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.4.6",
+    "nodemon": "^2.0.19"
   }
 }
