--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "components": "^0.1.0",
     "leaflet": "^1.8.0",
     "moment": "^2.29.4",
+    "password-regexp": "^1.0.5",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
+    "utils": "^0.3.1",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
