--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flightpub",
+  "proxy": "http://localhost:8800/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -60,5 +61,6 @@
   },
   "devDependencies": {
     "react-tooltip": "^4.2.21"
-  }
+  },
+  "proxy": "http://localhost:8800/"
 }
