route for filter by query, button for add to booking

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flightpub",
   "proxy": "http://localhost:8800/",
+  "proxy": "http://localhost:8800/backend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
