--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "password-regexp": "^1.0.5",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -42,7 +43,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
