Flight Search Selection Bug Fix

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^4.2.21",
     "svgo": "^2.8.0",
-    "react-scripts": "^5.0.1"
+    "validator": "^13.7.0"
   }
 }
