--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^4.2.21",
-    "svgo": "^2.8.0",
-    "react-scripts": "^5.0.1"
+    "simple-random-number-generator": "^1.2.1",
+    "svgo": "^2.8.0"
   }
 }
