--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-tiny-popover": "^7.1.0",
+    "react-use-cart": "^1.13.0",
     "react-widgets": "^5.8.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
