--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "react-scripts build",
     "start": "react-scripts start",
-    "build": "npm run build" ,
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
