--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cd client && react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
     "install": "concurrently \"cd backend && npm install\" \"cd client && npm install\""
