re-organise project structure

--- a/package.json
+++ b/package.json
@@ -1,37 +1,13 @@
 {
   "name": "flightpub",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+
   "scripts": {
     "build": "cd client && react-scripts build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
-    "install": "concurrently \"cd backend && npm install\" \"cd client && npm install\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/danbeiers/flightpub.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/danbeiers/flightpub/issues"
-  },
-  "homepage": "https://github.com/danbeiers/flightpub#readme",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "concurrently": "^7.3.0",
-    "react-scripts": "^5.0.1",
-    "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^4.2.21",
-    "simple-random-number-generator": "^1.2.1",
-    "svgo": "^2.8.0",
-    "validator": "^13.7.0"
-  },
-  "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
+
 }
