--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "components": "^0.1.0",
+    "create-react-app": "^5.0.1",
     "leaflet": "^1.8.0",
     "moment": "^2.29.4",
     "password-regexp": "^1.0.5",
@@ -33,6 +34,7 @@
     "react-widgets": "^5.8.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
+    "simple-random-number-generator": "^1.2.1",
     "styled-components": "^5.3.5",
     "utils": "^0.3.1",
     "validator": "^13.7.0",
