re-organise project structure

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.19",
-    "password-regexp": "^1.0.5"
+    "password-regexp": "^1.0.5",
+    "svgo": "^2.8.0"
   }
 }
