--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
 
   "scripts": {
-    "build": "cd client && react-scripts build",
+    "build": "cd client && npm run build",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
