--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_URL = 'https://api.openweathermap.org/data/2.5'
 REACT_APP_API_KEY = 68fbfc95da52bf727f413c3a1ef2fc99
 REACT_APP_ICON_URL = 'https://openweathermap.org/img/w'
+CI = false
