--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "react-lifecycles-compat": "^3.0.4",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-maps": "^3.0.0",
     "react-tiny-popover": "^7.1.0",
     "react-use-cart": "^1.13.0",
