--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "cd backend && node index.js",
     "buildfront": "cd client && npm run build",
-    "start": "react-scripts start",
+    "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
