--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "cd backend && node index.js",
+    "build": "cd backend && npm run build",
     "buildfront": "cd client && npm run build",
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
     "test": "react-scripts test",
