--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "cd backend && npm run build",
     "buildfront": "cd client && npm run build",
     "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
     "test": "react-scripts test",
@@ -26,3 +25,4 @@
     "node": "v18.4.0"
   }
 }
+//"build": "cd backend && npm start",
